[gd_scene load_steps=4 format=4 uid="uid://t837ytc17v8"]

[ext_resource type="PackedScene" uid="uid://dn76l7tnyncxh" path="res://Nodes/UI/hex_grid.tscn" id="1_2qsq4"]
[ext_resource type="Script" uid="uid://dol11jxwwcjdp" path="res://Scripts/hex_grid_test.gd" id="1_5g802"]
[ext_resource type="PackedScene" uid="uid://jvxo8n2p3x3g" path="res://Nodes/UI/moveable_camera.tscn" id="3_w3wsi"]

[node name="Hex_Grid_test" type="Node2D"]
script = ExtResource("1_5g802")

[node name="Hex_Grid" parent="." instance=ExtResource("1_2qsq4")]
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAD//wEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAA=")

[node name="Moveable_Camera" parent="." instance=ExtResource("3_w3wsi")]

[node name="Highlight_Container" type="HBoxContainer" parent="Moveable_Camera"]
offset_left = -572.0
offset_top = -319.0
offset_right = -121.0
offset_bottom = -288.0

[node name="X" type="SpinBox" parent="Moveable_Camera/Highlight_Container"]
layout_mode = 2
min_value = -100.0
prefix = "x"

[node name="Y" type="SpinBox" parent="Moveable_Camera/Highlight_Container"]
layout_mode = 2
min_value = -100.0
prefix = "y"

[node name="R" type="SpinBox" parent="Moveable_Camera/Highlight_Container"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
prefix = "radius"

[node name="Color_Picker_Button" type="ColorPickerButton" parent="Moveable_Camera/Highlight_Container"]
layout_mode = 2
text = "Pick Color"
edit_alpha = false

[node name="Highlight" type="Button" parent="Moveable_Camera/Highlight_Container"]
layout_mode = 2
toggle_mode = true
text = "Highlight"

[node name="Path_Container" type="VBoxContainer" parent="Moveable_Camera"]
offset_left = 387.0
offset_top = -312.0
offset_right = 563.0
offset_bottom = -211.0

[node name="Cord_1" type="HBoxContainer" parent="Moveable_Camera/Path_Container"]
layout_mode = 2

[node name="X" type="SpinBox" parent="Moveable_Camera/Path_Container/Cord_1"]
layout_mode = 2
min_value = -100.0
prefix = "x"

[node name="Y" type="SpinBox" parent="Moveable_Camera/Path_Container/Cord_1"]
layout_mode = 2
min_value = -100.0
prefix = "y"

[node name="Cord_2" type="HBoxContainer" parent="Moveable_Camera/Path_Container"]
layout_mode = 2

[node name="X" type="SpinBox" parent="Moveable_Camera/Path_Container/Cord_2"]
layout_mode = 2
min_value = -100.0
prefix = "x"

[node name="Y" type="SpinBox" parent="Moveable_Camera/Path_Container/Cord_2"]
layout_mode = 2
min_value = -100.0
prefix = "y"

[node name="Highlight" type="Button" parent="Moveable_Camera/Path_Container"]
layout_mode = 2
toggle_mode = true
text = "Highlight path"

[connection signal="toggled" from="Moveable_Camera/Highlight_Container/Highlight" to="." method="_on_highlight_toggled"]
[connection signal="toggled" from="Moveable_Camera/Path_Container/Highlight" to="." method="_on_highlight_path_toggled"]
